fix css location

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KEPV</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="2.jpg" type="image/x-icon">
     <style>
         
@@ -325,7 +325,7 @@ Additionally, we maintain a presence in Egypt, with a flexible office location m
 <script>
     // إضافة الكود الخاص بك هنا
 </script>
-<script src="script.js"></script>
+<script src="js/script.js"></script>
 <script>
         // العثور على الزر
         const langToggle = document.getElementById('lang-toggle');
