--- a/index-ar.html
+++ b/index-ar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KEPV</title>
-    <link rel="stylesheet" href="styles1.css">
+    <link rel="stylesheet" href="css/styles1.css">
     <link rel="icon" href="2.jpg" type="image/x-icon">
     <style>
         
@@ -328,7 +328,7 @@
 <script>
     // إضافة الكود الخاص بك هنا
 </script>
-<script src="script.js"></script>
+<script src="js/script.js"></script>
 <script>
         // العثور على الزر
         const langToggle = document.getElementById('lang-toggle');
