--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@ Additionally, we maintain a presence in Egypt, with a flexible office location m
 
 <h3 class="center-heading">Current Projects</h3>
 <div class="work-grid">
-    <div class="work-card">
+    <div class="work-card" onclick="redirectToOtherPage('https://kepv18.github.io/portrait/')">
         <img src="image/portree.png" alt="Current Project 1">
         <h4>portree</h4>
         <p>A special design for a website that sells portraits, drawings, or any printed drawings</p>
     </div>
+</div>
     <div class="work-card">
         <img src="image/redvoda.png" alt="Current Project 2">
         <h4>red for vodafone</h4>
