--- a/index-ar.html
+++ b/index-ar.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KEPV</title>
     <link rel="stylesheet" href="css/styles1.css">
-    <link rel="icon" href="2.jpg" type="image/x-icon">
+    <link rel="icon" href="image/2.ico" type="image/x-icon">
     <style>
         
     </style>
@@ -14,7 +14,7 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <img src="2.jpg" alt="Logo">
+            <img src="image/2.jpg" alt="Logo">
             <h1>KEPV LIMITED</h1>
             <nav>
                 <ul>
@@ -103,12 +103,14 @@
         </div>
         
         <h3 class="center-heading">Current Projects</h3>
-        <div class="work-grid">
-            <div class="work-card">
-                <img src="image/portree.png" alt="Current Project 1">
-                <h4>portree</h4>
-                <p>A special design for a website that sells portraits, drawings, or any printed drawings</p>
-            </div>
+<div class="work-grid">
+    <div class="portrait"> 
+        <a href="https://kepv18.github.io/portrait/"> <div class="work-card">
+            <img src="image/portree.png" alt="Current Project 1">
+            <h4>portrait</h4>
+            <p>A special design for a website that sells portraits, drawings, or any printed drawings</p>
+        </div></a>
+    </div>
             <div class="work-card">
                 <img src="image/redvoda.png" alt="Current Project 2">
                 <h4>red for vodafone</h4>
