--- a/index-ar.html
+++ b/index-ar.html
@@ -305,8 +305,6 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 Kepv Limited. جميع الحقوق محفوظة.</p>
-            <!-- اضف روابط وسائل التواصل الاجتماعي هنا -->
             <p>تابعنا على وسائل التواصل الاجتماعي:</p>
             <ul>
                 
@@ -315,6 +313,13 @@
                 <li><a href="https://github.com/KEPV18" target="_blank">github</a></li>
                 
             </ul>
+            <p>
+                <a style="color: #ff0000; /* لون الرابط الأحمر */
+                text-decoration: none;" target="_blank" href="https://kepv18.github.io/KEPV18"><br><img style="max-width: 3%;" src="icons/KEPV.jpg"><br>kepv</a>
+                تم إنشاؤها بـ <i class="fa fa-heart"></i> بواسطة
+            </p>
+            <p>© 2024 Kepv Limited. All rights reserved.</p>
+            <!-- اضف روابط وسائل التواصل الاجتماعي هنا -->
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
