--- a/index.html
+++ b/index.html
@@ -302,8 +302,6 @@ Additionally, we maintain a presence in Egypt, with a flexible office location m
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 Kepv Limited. All rights reserved.</p>
-            <!-- اضف روابط وسائل التواصل الاجتماعي هنا -->
             <p>Follow us on Social Media:</p>
             <ul>
                 
@@ -312,6 +310,13 @@ Additionally, we maintain a presence in Egypt, with a flexible office location m
                 <li><a href="https://github.com/KEPV18" target="_blank">github</a></li>
                 
             </ul>
+            <p>
+                <a style="color: #ff0000; /* لون الرابط الأحمر */
+                text-decoration: none;" target="_blank" href="https://kepv18.github.io/KEPV18"><br><img style="max-width: 3%;" src="icons/KEPV.jpg"><br>kepv</a>
+                تم إنشاؤها بـ <i class="fa fa-heart"></i> بواسطة
+            </p>
+            <p>© 2024 Kepv Limited. All rights reserved.</p>
+            <!-- اضف روابط وسائل التواصل الاجتماعي هنا -->
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
