--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/compressorjs/1.0.7/compressor.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const someElement = document.getElementById('someElementId');
+            if (someElement) {
+                someElement.addEventListener('click', function() {
+                    // كود الحدث هنا
+                });
+            } else {
+                console.log('العنصر غير موجود');
+            }
+        });
+    </script>
 </head>
 <body>
     <!-- Header -->
@@ -119,7 +134,7 @@
             <div class="work-card">
                 <picture>
                     <source srcset="image/login.webp" type="image/webp">
-                    <img src="image/login.png" alt="Current Project 3" loading="lazy">
+                    <img src="images/login.webp" alt="Current Project 3" loading="lazy">
                 </picture>
                 <h4>login</h4>
                 <p>Simple and primitive login page design</p>
@@ -252,14 +267,13 @@
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/compressorjs/1.0.7/compressor.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/glightbox/1.2.1/js/glightbox.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajaxy/1.6.1/jquery.ajaxy.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/16.1.3/smooth-scroll.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.bundle.min.js"></script>
     <script src="https://www.google-analytics.com/analytics.js" async></script>
-    <script src="js/script.js"></script>
     
 </body>
 </html>
