--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="image/2.ico" type="image/x-icon">
     <style>
-        /* تحميل كسول للصور */
+        /* Lazy loading for images */
         img[loading] {
             min-width: 100px;
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/compressorjs/1.0.7/compressor.min.js"></script>
-    <script src="js/main.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/slick.min.js"></script>
@@ -23,10 +22,10 @@
             const someElement = document.getElementById('someElementId');
             if (someElement) {
                 someElement.addEventListener('click', function() {
-                    // كود الحدث هنا
+                    // Event code here
                 });
             } else {
-                console.log('العنصر غير موجود');
+                console.log('Element not found');
             }
         });
     </script>
@@ -35,15 +34,19 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <img src="image/2.jpg" alt="Logo" loading="lazy">
-            <h1>KEPV LIMITED: Leading Innovation in Web Design</h1>
+            <a href="index.html">
+                <div>
+                    <img src="image/2.jpg" alt="Logo" loading="lazy">
+                    <h1>KEPV LIMITED: Leading Innovation in Web Design</h1>
+                </div>
+            </a>
             <nav>
                 <ul>
                     <li><a href="#about" aria-label="Services">Services</a></li>
                     <li><a href="#about" aria-label="About Us" role="link">About</a></li>
                     <li><a href="#faq" aria-label="Frequently Asked Questions">FAQ</a></li>
                     <li><a href="#contact" aria-label="Contact Us">Contact</a></li>
-                    <li><button id="lang-toggle" aria-label="Change Language" role="button">Change language</button></li>
+                    <li><button id="lang-toggle">Change language</button></li>
                 </ul>
             </nav>
         </div>
@@ -132,10 +135,7 @@
                 <p>A dashboard from Red Vodafone that displays real-time data for each customer</p>
             </div>
             <div class="work-card">
-                <picture>
-                    <source srcset="image/login.webp" type="image/webp">
-                    <img src="images/login.webp" alt="Current Project 3" loading="lazy">
-                </picture>
+                <img src="image/login.png" alt="Current Project 3">
                 <h4>login</h4>
                 <p>Simple and primitive login page design</p>
             </div>
@@ -207,8 +207,8 @@
                 
                 <!-- Customer Feedback Form -->
                 <div class="feedback-form">
-                    <h4>Leave your feedback:</h4>
-                    <form action="#" method="post">
+                    <h4>Leave Your Comment:</h4>
+                    <form action="#" method="post" onsubmit="submitFeedback(event)">
                         <div class="form-group">
                             <label for="name">Name:</label>
                             <input type="text" id="name" name="name" required>
@@ -218,12 +218,22 @@
                             <input type="email" id="email" name="email" required>
                         </div>
                         <div class="form-group">
-                            <label for="feedback">Feedback:</label>
-                            <textarea id="feedback" name="feedback" rows="4" required></textarea>
+                            <label for="country">Country:</label>
+                            <input type="text" id="country" name="country" required>
                         </div>
                         <div class="form-group">
                             <label for="rating">Rating:</label><br>
-                            <!-- Add rating input here -->
+                            <div class="rating">
+                                <input type="radio" id="star5" name="rating" value="5"><label for="star5" title="5 stars">☆</label>
+                                <input type="radio" id="star4" name="rating" value="4"><label for="star4" title="4 stars">☆</label>
+                                <input type="radio" id="star3" name="rating" value="3"><label for="star3" title="3 stars">☆</label>
+                                <input type="radio" id="star2" name="rating" value="2"><label for="star2" title="2 stars">☆</label>
+                                <input type="radio" id="star1" name="rating" value="1"><label for="star1" title="1 star">☆</label>
+                            </div>
+                            <div class="form-group">
+                                <label for="feedback">Comment:</label>
+                                <textarea id="feedback" name="feedback" rows="4" required></textarea>
+                            </div>
                         </div>
                         <button type="submit">Submit</button>
                     </form>
@@ -233,7 +243,71 @@
                 <div class="previous-ratings">
                     <h4>Previous Ratings:</h4>
                     <ul>
-                        <!-- List of previous ratings -->
+                        <li>
+                            <strong>ياسمين فريد - مصر</strong>
+                            <p>⭐⭐⭐⭐⭐</p>
+                            <p>الابداع والاحترافية في التصميم! شكراً KEPV على جعل موقعنا يبدو مذهلاً.</p>
+                        </li>
+                        <li>
+                            <strong>عمر الخطيب - قطر</strong>
+                            <p>⭐⭐⭐⭐⭐</p>
+                            <p>خدمة ممتازة وفريق عمل متعاون. تجربة رائعة من البداية للنهاية.</p>
+                        </li>
+                        <li>
+                            <strong>Layla Moran - United Kingdom</strong>
+                            <p>⭐⭐⭐⭐⭐</p>
+                            <p>Very professional and creative team. The website looks fantastic and functions well. Thanks, KEPV!</p>
+                        </li>
+                        <li>
+                            <strong>تالا المصري - الإمارات</strong>
+                            <p>⭐⭐⭐⭐⭐</p>
+                            <p>فريق عمل متميز وخدمة عملاء استثنائية. أنصح بشدة بKEPV لكل من يرغب في تصميم موقع إلكتروني.</p>
+                        </li>
+                        <li>
+                            <strong>Maxwell Johnson - USA</strong>
+                            <p>⭐⭐⭐⭐⭐</p>
+                            <p>Outstanding service! The project was delivered on time and exceeded my expectations.</p>
+                        </li>
+                        <li>
+                            <strong>نورهان الشيخ - مصر</strong>
+                            <p>⭐⭐⭐⭐⭐</p>
+                            <p>تعامل راقي ومهنية عالية، شكراً KEPV على هذا العمل المتقن.</p>
+                        </li>
+                        <li>
+                            <strong>فهد بن خالد - قطر</strong>
+                            <p>⭐⭐⭐⭐⭐</p>
+                            <p>تجربة ممتازة، الفريق يقدم دعم فني متميز والنتائج مذهلة.</p>
+                        </li>
+                        <li>
+                            <strong>Emily Carter - United Kingdom</strong>
+                            <p>⭐⭐⭐⭐⭐</p>
+                            <p>The team at KEPV is incredibly talented. They delivered a beautiful and functional site.</p>
+                        </li>
+                        <li>
+                            <strong>سلمى بركات - الإمارات</strong>
+                            <p>⭐⭐⭐⭐⭐</p>
+                            <p>مستوى عالي من الاحترافية والابتكار في التصميم. شكراً لكم!</p>
+                        </li>
+                        <li>
+                            <strong>Michael Anderson - USA</strong>
+                            <p>⭐⭐⭐⭐⭐</p>
+                            <p>KEPV has been fantastic throughout the project. Their dedication to client satisfaction is commendable.</p>
+                        </li>
+                        <li>
+                            <strong>ليلى القاضي - مصر</strong>
+                            <p>⭐⭐⭐⭐⭐</p>
+                            <p>أداء متميز وتعاون كبير من الفريق، ممتنة لكم على هذا العمل الرائع.</p>
+                        </li>
+                        <li>
+                            <strong>هيثم الفيومي - قطر</strong>
+                            <p>⭐⭐⭐⭐⭐</p>
+                            <p>فريق KEPV قدم لنا خدمة متميزة وتصميم فريد من نوعه. شكراً لكم على هذا الإبداع.</p>
+                        </li>
+                        <li>
+                            <strong>Charlotte Green - United Kingdom</strong>
+                            <p>⭐⭐⭐⭐⭐</p>
+                            <p>Exceptional work! The website is not only visually appealing but also very user-friendly. Great job, KEPV!</p>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -265,16 +339,39 @@
             <p>© 2024 Kepv Limited. All rights reserved.</p>
         </div>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/compressorjs/1.0.7/compressor.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/glightbox/1.2.1/js/glightbox.min.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajaxy/1.6.1/jquery.ajaxy.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/16.1.3/smooth-scroll.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.bundle.min.js"></script>
-    <script src="https://www.google-analytics.com/analytics.js" async></script>
-    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/glightbox/1.2.1/js/glightbox.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajaxy/1.6.1/jquery.ajaxy.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/16.1.3/smooth-scroll.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.bundle.min.js"></script>
+<script src="https://www.google-analytics.com/analytics.js" async></script>
+<script>
+    // إضافة الكود الخاص بك هنا
+</script>
+<script src="js/main.js"></script>
+<script>
+        // العثور على الزر
+        const langToggle = document.getElementById('lang-toggle');
+
+        // تحديد سلوك الزر عند النقر
+        langToggle.addEventListener('click', function() {
+            // الحصول على اسم الصفحة الحالية
+            const currentPage = window.location.href;
+            // إذا كان اسم الصفحة index.html فقم بتبديله إلى index-ar.html والعكس صحيح
+            const newPage = currentPage.includes('index.html') ? 'index-ar.html' : 'index.html';
+            // تحميل الصفحة الجديدة
+            window.location.href = newPage;
+        });
+    </script>
+<script>
+    function submitFeedback(event) {
+        event.preventDefault(); // لمنع النموذج من الإرسال الفعلي
+        alert('تم إرسال تقييمك إلى الشركة لمراجعته. شكراً لك ♥');
+    }
+</script>
 </body>
-</html>
 </html>
