--- a/index-ar.html
+++ b/index-ar.html
@@ -7,6 +7,11 @@
     <title>KEPV</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="image/2.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <style>
         /* Lazy loading for images */
         img[loading] {
@@ -320,7 +325,7 @@
             <div class="container">
                 <h2>اتصل بنا</h2>
                 <p>هل لديك مشروع في عين الاعتبار؟ تواصل معنا!</p>
-                <p>البريد الإلكتروني: kepvltd@icloud.com</p>
+                <a href="mailto:kepvltd@icloud.com"><p>Email: kepvltd@icloud.com</p></a>
                 <p>واتساب: <a href="https://wa.me/+201121199859">+201121199859 (رقم الرئيس التنفيذي)</a></p>
             </div>
         </section>
